[FIX] Font size, text spacing

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -272,6 +272,8 @@ tr td:last-child {
 
 .post-header>div {
 	font-size: 1.1em;
+	margin-bottom: 0.2rem;
+	margin-top: 0.2rem;
 }
 
 .post-header small:last-child {
